--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                         <div class="our-team">
 
                             <div class="team-member">
-                                <img src="images/team/BC.jpg" alt="">
+                                <img src="images/team/udit satija.png" alt="">
                                 <div class="team-details">
                                     <h4>Dr. Udit Satija</h4>
                                     <p>Chairman</p>
@@ -789,7 +789,7 @@
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/Abhisek.jpeg" alt="">
+                                <img src="images/team/harsh.png" alt="">
                                 <div class="team-details">
                                     <h4>Harsh Ranjan</h4>
                                     <p>President</p>
@@ -802,7 +802,7 @@
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/PKB.jpeg" alt="">
+                                <img src="images/team/Medhashree.jpeg" alt="">
                                 <div class="team-details">
                                     <h4>Medhasree Ghosh</h4>
                                     <p>Vice-President</p>
@@ -815,7 +815,7 @@
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/ARay.jpg" alt="">
+                                <img src="images/team/jajna.png" alt="">
                                 <div class="team-details">
                                     <h4>Jajna Prasad Sahoo</h4>
                                     <p>General Secretary</p>
@@ -831,7 +831,7 @@
                             </div>
 
                             <div class="team-member">
-                                <img src="images/team/vc.png" alt="">
+                                <img src="images/team/rohit.png" alt="">
                                 <div class="team-details">
                                     <h4>Rohit Ray</h4>
                                     <p>Treasurer</p>
