--- a/ieee_day23.html
+++ b/ieee_day23.html
@@ -70,7 +70,7 @@
     <img src="images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
     <div class="container text-center"><a
             href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                type="button" class="btn btn-primary">Register for NSRS 2023</button></a><br />
+                type="button" class="btn btn-primary">Register for NSRS 2024</button></a><br />
 
 
         <div class="container d-flex justify-content-around py-5">
@@ -82,12 +82,12 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row"> <i class="fa fa-calendar"></i> &ensp;Date :</th>
-                                        <td>14th and 15th Oct 2023</td>
+                                        <td>26th Oct 2024</td>
 
                                     </tr>
                                     <tr>
                                         <th scope="row"><i class="fa fa-map-marker"></i> &ensp; Venue :</th>
-                                        <td>IIT Patna</td>
+                                        <td>Senate Hall IIT Patna</td>
 
                                     </tr>
                                 </tbody>
@@ -105,7 +105,7 @@
                                     <br />
                                     <a href="./ieee_day23/events/TechnoTricks.html" style="text-decoration: none;"
                                         class="glow"><b>Registration for TechnoTricks has started.</b><br />
-                                        Last Date to apply is 13th October, 2023</a>
+                                        Last Date to apply is 24th October, 2024</a>
 
                                 </tbody>
 
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 style="color: #00629B; font-weight: bold;" class="my-4">About</h2>
-                    <p style="text-align: justify;">NSRS 2023 is a common platform for graduate students to postdoctoral
+                    <p style="text-align: justify;">NSRS 2024 is a common platform for graduate students to postdoctoral
                         researchers, to present their research findings and discuss with peers and experts in their
                         field.
                     </p>
@@ -324,7 +324,7 @@
             </tbody>
         </table>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
-                type="button" class="btn btn-primary">Register for NSRS 2023</button></a>
+                type="button" class="btn btn-primary">Register for NSRS 2024</button></a>
     </section>
 
     <section id="dates" class="container py-3">
@@ -334,27 +334,27 @@
             <tbody>
                 <tr>
                     <td>Registration opens</td>
-                    <td>September 15, 2023</td>
+                    <td>October 15, 2024</td>
                 </tr>
                 <tr>
                     <td>Registrations and Submission of Abstracts close</td>
-                    <td>September 30, 2023</td>
+                    <td>October 22, 2024</td>
                 </tr>
                 <tr>
                     <td>Confirmation of Registration with Payment</td>
-                    <td>September 30, 2023</td>
+                    <td>October 17, 2024</td>
                 </tr>
                 <tr>
                     <td>Declaration of Shortlisted Candidates:</td>
-                    <td>October 5, 2023</td>
+                    <td>October 22, 2024</td>
                 </tr>
                 <tr>
                     <td>Poster Submission by Shortlisted Candidates</td>
-                    <td>October 10, 2023</td>
+                    <td>October 25, 2024</td>
                 </tr>
                 <tr>
                     <td>Three Minutes Research Presentation PPT by Shortlisted Candidates</td>
-                    <td>October 10, 2023</td>
+                    <td>October 25, 2024</td>
                 </tr>
 
             </tbody>
@@ -489,7 +489,7 @@
 
                 </div>
                 <div class="col-md-6 text-right">
-                    <p>&copy; NSRS 2023</p>
+                    <p>&copy; NSRS 2024</p>
                 </div>
             </div>
 
