--- a/ieee_day24.html
+++ b/ieee_day24.html
@@ -67,7 +67,7 @@
             <a href="#events" class="btn btn-primary">Explore Events</a>
         </div>
     </section> -->
-    <img src="images/ieeeday23/nsrs.png" style="width: 100vw; height: auto;">
+    <img src="images/event/NSRS 2024.jpg" style="width: 100vw; height: auto;">
     <div class="container text-center"><a
             href="https://docs.google.com/forms/d/e/1FAIpQLScSziTr3AjJY2aTChjQ7aXbD7zBUY5MrXIk_PA8SxhmRUlpoA/viewform"><button
                 type="button" class="btn btn-primary">Register for NSRS 2024</button></a><br />
