--- a/ieee_day24.html
+++ b/ieee_day24.html
@@ -82,7 +82,7 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row"> <i class="fa fa-calendar"></i> &ensp;Date :</th>
-                                        <td>26th Oct 2024</td>
+                                        <td>16th Nov 2024</td>
 
                                     </tr>
                                     <tr>
@@ -105,7 +105,7 @@
                                     <br />
                                     <a href="./ieee_day23/events/TechnoTricks.html" style="text-decoration: none;"
                                         class="glow"><b>Registration for TechnoTricks has started.</b><br />
-                                        Last Date to apply is 24th October, 2024</a>
+                                        Last Date to apply is 12th November, 2024</a>
 
                                 </tbody>
 
@@ -323,7 +323,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScZ5IPW3XGp2bQ46Pio0zefVUAcyaL7F3hjhDkKpUtfZZy1_Q/viewform"><button
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScSziTr3AjJY2aTChjQ7aXbD7zBUY5MrXIk_PA8SxhmRUlpoA/viewform"><button
                 type="button" class="btn btn-primary">Register for NSRS 2024</button></a>
     </section>
 
@@ -334,27 +334,27 @@
             <tbody>
                 <tr>
                     <td>Registration opens</td>
-                    <td>October 15, 2024</td>
+                    <td>October 30, 2024</td>
                 </tr>
                 <tr>
                     <td>Registrations and Submission of Abstracts close</td>
-                    <td>October 22, 2024</td>
+                    <td>TBA</td>
                 </tr>
                 <tr>
                     <td>Confirmation of Registration with Payment</td>
-                    <td>October 17, 2024</td>
+                    <td>TBA</td>
                 </tr>
                 <tr>
                     <td>Declaration of Shortlisted Candidates:</td>
-                    <td>October 22, 2024</td>
+                    <td>TBA</td>
                 </tr>
                 <tr>
                     <td>Poster Submission by Shortlisted Candidates</td>
-                    <td>October 25, 2024</td>
+                    <td>TBA</td>
                 </tr>
                 <tr>
                     <td>Three Minutes Research Presentation PPT by Shortlisted Candidates</td>
-                    <td>October 25, 2024</td>
+                    <td>TBA</td>
                 </tr>
 
             </tbody>
